fix: dropdown icon dark mode and cleanup

--- a/src/components/reusable/dropdown/dropdown.scss
+++ b/src/components/reusable/dropdown/dropdown.scss
@@ -134,18 +134,6 @@
   }
 }
 
-.error-icon {
-  position: absolute;
-  top: 50%;
-  right: 48px;
-  left: auto;
-  transform: translateY(-50%);
-}
-
-.error-info-icon {
-  display: flex;
-}
-
 .caption {
   [inline] & {
     margin-left: 16px;
@@ -192,7 +180,6 @@
 
   span {
     display: flex;
-    color: var(--kd-color-icon-primary);
 
     svg {
       width: 14px;
@@ -201,7 +188,8 @@
   }
 
   &[disabled] {
-    opacity: 0.5;
+    background-color: var(--kd-color-tags-background-disabled);
+    color: var(--kd-color-text-level-disabled);
     cursor: not-allowed;
   }
 }
